--- a/src/app/styles/flags.scss
+++ b/src/app/styles/flags.scss
@@ -9,7 +9,7 @@
 
 %flagged {
 
-  background: $state-info-bg;
+  background-color: $state-info-bg;
 
 }
 
